# Random-Early-Drop-Router-Simulator

./: .gitignore  README.md
RED-Queue-Router/: CMakeLists.txt  event.h  main.cpp  mainwindow.h  metrics.cpp  metrics.h  packet.h  packet_generator.cpp  packet_generator.h  plot_metrics.py  queue.cpp  queue.h  router.cpp  router.h  shit_mainwindow.cpp  shit_worker.h  simulator.cpp  simulator.h  visualization.cpp  visualization.h  worker.cpp
